force-app/main/default/objects/Calendar_Settings__mdt/Calendar_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for the Google Calendar integration</description>
    <label>Calendar Settings</label>
    <pluralLabel>Calendar Settings</pluralLabel>
</CustomObject>