force-app/main/default/objects/Calendar_Settings__mdt/fields/Default_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Default_Timezone__c</fullName>
    <label>Default Timezone</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>