force-app/main/default/objects/Calendar_Settings__mdt/fields/Slot_Duration_Min__c.field-meta.xml
<CustomField>
    <fullName>Slot_Duration_Min__c</fullName>
    <label>Slot Duration (minutes)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>