force-app/main/default/objects/Calendar_Settings__mdt/fields/Work_End_Hour__c.field-meta.xml
<CustomField>
    <fullName>Work_End_Hour__c</fullName>
    <label>Work End Hour</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>